--- a/pubs.bib
+++ b/pubs.bib
@@ -68,7 +68,7 @@ author={Tianyu Zhang and Louise A. Dennis and Matt Webster},
 title={{AsteroidX}: An Asteroid Exploration Simulation and Visualisation Tool},
 booktitle={Workshop on Advances in Space Robotics and back to Earth},
 year=2021,
-note={[<span class="fs">FAIR-Space</span>, To Appear]}
+note={[<span class="fs">FAIR-Space</span>]}
 }
 
 @incollection{Slocombe2021,
@@ -109,7 +109,7 @@ note={[<span class="orca">ORCA</span>]}
       title={A Defeasible Logic Implementation of Ethical Reasoning},
       booktitle={First International Workshop on Computational Machine Ethics (CME-2021)},
       year=2021,
-      note={[<span class="tas_vn">TAS Verifiability Node</span>, To appear]}
+      note={[<span class="tas_vn">TAS Verifiability Node</span>]}
       }
       
       @inproceedings{AlvesERS21,
@@ -117,7 +117,7 @@ note={[<span class="orca">ORCA</span>]}
       title={An Agent-based architecture with support to Ethical Decisions on a Road Traffic Scenario},
       booktitle={IROS Workshop on Building and Evaluating Ethical Robotic Systems (ERS 2021)},
       year=2021,
-      note={[<span class="tas_vn">TAS Verifiability Node</span>, To appear]}
+      note={[<span class="tas_vn">TAS Verifiability Node</span>]}
       }
 
 
@@ -207,7 +207,7 @@ DOI = {10.3390/jsan10030047}
   note={[<span class="raeng">RAEng</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
 }
 
-@aricle{p7001,
+@article{p7001,
   AUTHOR={Winfield, Alan F. T. and Booth, Serena and Dennis, Louise A. and Egawa, Takashi and Hastie, Helen and Jacobs, Naomi and Muttram, Roderick I. and Olszewska, Joanna I. and Rajabiyazdi, Fahimeh and Theodorou, Andreas and Underwood, Mark A. and Wortham, Robert H. and Watson, Eleanor},   	 
 TITLE={IEEE P7001: A Proposed Standard on Transparency},      	
 JOURNAL={Frontiers in Robotics and AI},      	
