--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,12 @@
 
+@article{DennisNetReason,
+author = {Louise A. Dennis and Yu Fu and Marija Slavkovik},
+title = {Markov Chain Model Representation of Information Diffusion in Social Networks},
+year = {2021}, 
+journal = {Journal of Logic and Computation},
+note={To Appear}
+}
+
 @techreport{principles_white_paper_2021,
 	title = {Principles for the {Development} and {Assurance} of {Autonomous} {Systems} for {Safe} {Use} in {Hazardous} {Environments}},
 	copyright = {Creative Commons Attribution 4.0 International, Open Access},
