--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,12 @@
+@INPROCEEDINGS{P7009:ISSREW21,
+  author={Farrell, Marie and Luckcuck, Matt and Pullum, Laura and Fisher, Michael and Hessami, Ali and Gal, Danit and Murahwi, Zvikomborero and Wallace, Ken},
+  booktitle={Proc. IEEE International Symposium on Software Reliability Engineering Workshops (ISSREW)}, 
+  title={Evolution of the IEEE P7009 Standard: Towards Fail-Safe Design of Autonomous Systems}, 
+  year={2021},
+  pages={401-406},
+  doi={10.1109/ISSREW53611.2021.00109}
+  }
+
 
 @article{DennisNetReason,
 author = {Louise A. Dennis and Yu Fu and Marija Slavkovik},
