--- a/pubs.bib
+++ b/pubs.bib
@@ -9,12 +9,18 @@
 
 
 @article{DennisNetReason,
-author = {Louise A. Dennis and Yu Fu and Marija Slavkovik},
-title = {Markov Chain Model Representation of Information Diffusion in Social Networks},
-year = {2021}, 
-journal = {Journal of Logic and Computation},
-note={To Appear}
-}
+   author = {Dennis, Louise A and Fu, Yu and Slavkovik, Marija},
+    title = "{Markov chain model representation of information diffusion in social networks}",
+    journal = {Journal of Logic and Computation},
+    year = {2022},
+    month = {03},
+    abstract = "{The spread of information in a social network has received renewed interest as social media becomes an increasingly popular channel of communication. We are interested in the phenomenon of social diffusion of a piece of information in the presence of a contradicting information in the network. Specifically we explore the use of formal methods for verification in studying this phenomena. Using Monte Carlo simulation and the probabilistic model checker (PRISM) we are able to represent social networks and confirm an earlier conjecture that disseminating new information rapidly is resistant to the presence of contradicting information.}",
+    issn = {0955-792X},
+    doi = {10.1093/logcom/exac018},
+    url = {https://doi.org/10.1093/logcom/exac018},
+    note = {exac018},
+    eprint = {https://academic.oup.com/logcom/advance-article-pdf/doi/10.1093/logcom/exac018/42844230/exac018.pdf}
+    }
 
 @techreport{principles_white_paper_2021,
 	title = {Principles for the {Development} and {Assurance} of {Autonomous} {Systems} for {Safe} {Use} in {Hazardous} {Environments}},
