--- a/pubs.bib
+++ b/pubs.bib
@@ -314,7 +314,13 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
       author={Peter Stringer and Rafael C. Cardoso and Clare Dixon and Louise A. Dennis},
       title={Implementing Durative Actions with Failure Detection in Gwendolen},
       booktitle={9th International Workshop on Engineering Multi-Agent Systems},
-      year={2021},
+      year={2022},
+      editor={Alechina, Natasha
+and Baldoni, Matteo
+and Logan, Brian},
+publisher={Springer International Publishing},
+address={Cham},
+pages={332--351},
       note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
       }
 
