--- a/pubs.bib
+++ b/pubs.bib
@@ -14,6 +14,38 @@
   doi={10.1109/ISSREW53611.2021.00109}
   }
 
+@article{Araiza-IllanFLO22,
+  author    = {Dejanira Araiza{-}Illan and
+               Michael Fisher and
+               Kevin Leahy and
+               Joanna Isabelle Olszewska and
+               Signe A. Redfield},
+  title     = "{Verification of Autonomous Systems {[TC} Spotlight]}",
+  journal   = {{IEEE} Robotics and Automation Magazine},
+  volume    = {29},
+  number    = {1},
+  pages     = {99--101},
+  year      = {2022},
+  url       = {https://doi.org/10.1109/MRA.2022.3143966},
+  doi       = {10.1109/MRA.2022.3143966}
+}
+
+@article{KourtisDFL,
+  author    = {Georgios Kourtis and
+               Clare Dixon and
+               Michael Fisher and
+               Alexei P. Lisitsa},
+  title     = "{Parameterized Verification of Leader/Follower Systems via First-Order
+               Temporal Logic}",
+  journal   = {Formal Methods in System Design},
+  volume    = {58},
+  number    = {3},
+  pages     = {440--468},
+  year      = {2022},
+  url       = {https://doi.org/10.1007/s10703-022-00390-y},
+doi       = {10.1007/s10703-022-00390-y},
+note={[<span class="s4">S4</span>, <span class="fs">FAIR-Space</span>, <span class="raeng">RAEng</span>]}
+}
 
 @article{DennisNetReason,
    author = {Dennis, Louise A and Fu, Yu and Slavkovik, Marija},
