--- a/pubs.bib
+++ b/pubs.bib
@@ -3,7 +3,8 @@
       title = {Explaining {BDI} Agent Behaviour through Dialogue},
       journal = {Journal of Autonomous Agents and Multi-Agent Systems},
       year = 2022,
-      note = {To Appear, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>]}}
+      doi={10.1007/s10458-022-09556-8},
+      note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>]}}
       
 @INPROCEEDINGS{P7009:ISSREW21,
   author={Farrell, Marie and Luckcuck, Matt and Pullum, Laura and Fisher, Michael and Hessami, Ali and Gal, Danit and Murahwi, Zvikomborero and Wallace, Ken},
