--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,18 @@
+@InProceedings{IFM_Keynote,
+author="Dennis, Louise A.",
+editor="ter Beek, Maurice H.
+and Monahan, Rosemary",
+title="Verifying Autonomous Systems",
+booktitle="Integrated Formal Methods",
+year="2022",
+publisher="Springer International Publishing",
+address="Cham",
+pages="3--17",
+abstract="This paper focuses on the work of the Autonomy and Verification Network (https://autonomy-and-verification.github.io). In particular it will look at the use of model-checking to verify the choices made by a cognitive agent in control of decision making within an autonomous system. It will consider the assumptions that need to be made about the environment in which the agent operates in order to perform that verification and how those assumptions can be validated via runtime monitoring. Lastly it will consider how compositional techniques can be used to combine the agent verification with verification of other components within the autonomous system.",
+isbn="978-3-031-07727-2",
+note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span  class="va">Verifiable Autonomy</span>]}
+}
+
 @article{DennisOren22,
       author = {Louise A. Dennis and Nir Oren},
       title = {Explaining {BDI} Agent Behaviour through Dialogue},
