--- a/pubs.bib
+++ b/pubs.bib
@@ -10,7 +10,7 @@ address="Cham",
 pages="3--17",
 abstract="This paper focuses on the work of the Autonomy and Verification Network (https://autonomy-and-verification.github.io). In particular it will look at the use of model-checking to verify the choices made by a cognitive agent in control of decision making within an autonomous system. It will consider the assumptions that need to be made about the environment in which the agent operates in order to perform that verification and how those assumptions can be validated via runtime monitoring. Lastly it will consider how compositional techniques can be used to combine the agent verification with verification of other components within the autonomous system.",
 isbn="978-3-031-07727-2",
-note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span  class="va">Verifiable Autonomy</span>]}
+note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>, <span  class="va">Verifiable Autonomy</span>]}
 }
 
 @article{DennisOren22,
@@ -19,7 +19,7 @@ note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <spa
       journal = {Journal of Autonomous Agents and Multi-Agent Systems},
       year = 2022,
       doi={10.1007/s10458-022-09556-8},
-      note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>]}}
+      note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>]}}
       
 @INPROCEEDINGS{P7009:ISSREW21,
   author={Farrell, Marie and Luckcuck, Matt and Pullum, Laura and Fisher, Michael and Hessami, Ali and Gal, Danit and Murahwi, Zvikomborero and Wallace, Ken},
