--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,13 @@
-@InProceedings{IFM_Keynote,
+@article{AICOMMS22,
+      author="Louise Dennis and Clare Dixon and Michael Fisher",
+      title="Verifiable Autonomy: from Theory to Applications",
+      journal="AI Communications",
+      volume=35,
+      number=4,
+      pages="421--431",
+      year=2022}
+      
+ @InProceedings{IFM_Keynote,
 author="Dennis, Louise A.",
 editor="ter Beek, Maurice H.
 and Monahan, Rosemary",
