--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,16 @@
-@article{AICOMMS22,
+@INPROCEEDINGS{9900852,
+  author={Taylor, Hazel M and Jay, Caroline and Lennox, Barry and Cangelosi, Angelo and Dennis, Louise},
+  booktitle={2022 31st IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)}, 
+  title={Should AI Systems in Nuclear Facilities Explain Decisions the Way Humans Do? An Interview Study}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={956-962},
+  doi={10.1109/RO-MAN53752.2022.9900852},
+  note = {[<span class="rain">RAIN</span>]}
+  }
+  
+  @article{AICOMMS22,
       author="Louise Dennis and Clare Dixon and Michael Fisher",
       title="Verifiable Autonomy: from Theory to Applications",
       journal="AI Communications",
