Updating pubs with some of mine and Marie's

--- a/pubs.bib
+++ b/pubs.bib
@@ -1,7 +1,78 @@
+@article{Ferrando2022,
+  doi = {10.1007/s10703-022-00395-7},
+  url = {https://doi.org/10.1007/s10703-022-00395-7},
+  year = {2022},
+  month = aug,
+  publisher = {Springer Science and Business Media {LLC}},
+  author = {Angelo Ferrando and Rafael C. Cardoso and Marie Farrell and Matt Luckcuck and Fabio Papacchini and Michael Fisher and Viviana Mascardi},
+  title = {Bridging the gap between single- and multi-model predictive runtime verification},
+  journal = {Formal Methods in System Design}
+}
+
+@inproceedings{Luckcuck2022,
+  doi = {10.1109/rew56159.2022.00027},
+  url = {https://doi.org/10.1109/rew56159.2022.00027},
+  year = {2022},
+  month = aug,
+  publisher = {{IEEE}},
+  author = {Matt Luckcuck and Hazel M Taylor and Marie Farrell},
+  title = {An Abstract Architecture for Explainable Autonomy in Hazardous Environments},
+  booktitle = {2022 {IEEE} 30th International Requirements Engineering Conference Workshops ({REW})}
+}
+
+  @article{MacConville2022,
+  doi = {10.4204/eptcs.362.4},
+  url = {https://doi.org/10.4204/eptcs.362.4},
+  year = {2022},
+  month = jul,
+  publisher = {Open Publishing Association},
+  volume = {362},
+  pages = {15--22},
+  author = {Dara MacConville and Marie Farrell and Matt Luckcuck and Rosemary Monahan},
+  title = {Modelling the Turtle Python library in {CSP}},
+  journal = {Electronic Proceedings in Theoretical Computer Science}
+}
+
+@incollection{Farrell2022,
+  doi = {10.1007/978-3-030-98464-9_9},
+  url = {https://doi.org/10.1007/978-3-030-98464-9_9},
+  year = {2022},
+  publisher = {Springer International Publishing},
+  pages = {96--111},
+  author = {Marie Farrell and Matt Luckcuck and Ois{\'{\i}}n Sheridan and Rosemary Monahan},
+  title = {{FRETting} About Requirements: Formalised Requirements for~an~Aircraft Engine Controller},
+  booktitle = {Requirements Engineering: Foundation for Software Quality},
+  note = {[<span class="valu3s">VALU3S</span>]}
+}
+
+@incollection{Farrell2022,
+  doi = {10.1007/978-3-031-06773-0_14},
+  url = {https://doi.org/10.1007/978-3-031-06773-0_14},
+  year = {2022},
+  publisher = {Springer International Publishing},
+  pages = {272--279},
+  author = {Marie Farrell and Matt Luckcuck and Ois{\'{\i}}n Sheridan and Rosemary Monahan},
+  title = {Towards Refactoring {FRETish} Requirements},
+  booktitle = {Lecture Notes in Computer Science},
+  note = {[<span class="valu3s">VALU3S</span>]}
+}
+
+@inproceedings{Luckcuck2022,
+  doi = {10.1109/aero53065.2022.9843589},
+  url = {https://doi.org/10.1109/aero53065.2022.9843589},
+  year = {2022},
+  month = mar,
+  publisher = {{IEEE}},
+  author = {Matt Luckcuck and Marie Farrell and Oisin Sheridan and Rosemary Monahan},
+  title = {A Methodology for Developing a Verifiable Aircraft Engine Controller from Formal Requirements},
+  booktitle = {2022 {IEEE} Aerospace Conference ({AERO})},
+  note = {[<span class="valu3s">VALU3S</span>]}
+}
+
 @INPROCEEDINGS{9900852,
   author={Taylor, Hazel M and Jay, Caroline and Lennox, Barry and Cangelosi, Angelo and Dennis, Louise},
-  booktitle={2022 31st IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)}, 
-  title={Should AI Systems in Nuclear Facilities Explain Decisions the Way Humans Do? An Interview Study}, 
+  booktitle={2022 31st IEEE International Conference on Robot and Human Interactive Communication (RO-MAN)},
+  title={Should AI Systems in Nuclear Facilities Explain Decisions the Way Humans Do? An Interview Study},
   year={2022},
   volume={},
   number={},
@@ -9,7 +80,7 @@
   doi={10.1109/RO-MAN53752.2022.9900852},
   note = {[<span class="rain">RAIN</span>]}
   }
-  
+
   @article{AICOMMS22,
       author="Louise Dennis and Clare Dixon and Michael Fisher",
       title="Verifiable Autonomy: from Theory to Applications",
@@ -18,7 +89,7 @@
       number=4,
       pages="421--431",
       year=2022}
-      
+
  @InProceedings{IFM_Keynote,
 author="Dennis, Louise A.",
 editor="ter Beek, Maurice H.
@@ -42,11 +113,11 @@ note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <sp
       year = 2022,
       doi={10.1007/s10458-022-09556-8},
       note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="tas_vn">TAS Verifiability Node</span>]}}
-      
+
 @INPROCEEDINGS{P7009:ISSREW21,
   author={Farrell, Marie and Luckcuck, Matt and Pullum, Laura and Fisher, Michael and Hessami, Ali and Gal, Danit and Murahwi, Zvikomborero and Wallace, Ken},
-  booktitle={Proc. IEEE International Symposium on Software Reliability Engineering Workshops (ISSREW)}, 
-  title={Evolution of the IEEE P7009 Standard: Towards Fail-Safe Design of Autonomous Systems}, 
+  booktitle={Proc. IEEE International Symposium on Software Reliability Engineering Workshops (ISSREW)},
+  title={Evolution of the IEEE P7009 Standard: Towards Fail-Safe Design of Autonomous Systems},
   year={2021},
   pages={401-406},
   doi={10.1109/ISSREW53611.2021.00109}
@@ -211,7 +282,7 @@ note={[<span class="orca">ORCA</span>]}
       year=2021,
       note={[<span class="tas_vn">TAS Verifiability Node</span>]}
       }
-      
+
       @inproceedings{AlvesERS21,
       author={Gleifer Alves and Louise A. Dennis and Michael Fisher},
       title={An Agent-based architecture with support to Ethical Decisions on a Road Traffic Scenario},
@@ -308,19 +379,19 @@ DOI = {10.3390/jsan10030047}
 }
 
 @article{p7001,
-  AUTHOR={Winfield, Alan F. T. and Booth, Serena and Dennis, Louise A. and Egawa, Takashi and Hastie, Helen and Jacobs, Naomi and Muttram, Roderick I. and Olszewska, Joanna I. and Rajabiyazdi, Fahimeh and Theodorou, Andreas and Underwood, Mark A. and Wortham, Robert H. and Watson, Eleanor},   	 
-TITLE={IEEE P7001: A Proposed Standard on Transparency},      	
-JOURNAL={Frontiers in Robotics and AI},      	
-VOLUME={8},      
-PAGES={225},     	
-YEAR={2021},      	  
+  AUTHOR={Winfield, Alan F. T. and Booth, Serena and Dennis, Louise A. and Egawa, Takashi and Hastie, Helen and Jacobs, Naomi and Muttram, Roderick I. and Olszewska, Joanna I. and Rajabiyazdi, Fahimeh and Theodorou, Andreas and Underwood, Mark A. and Wortham, Robert H. and Watson, Eleanor},
+TITLE={IEEE P7001: A Proposed Standard on Transparency},
+JOURNAL={Frontiers in Robotics and AI},
+VOLUME={8},
+PAGES={225},
+YEAR={2021},
 URL={https://www.frontiersin.org/article/10.3389/frobt.2021.665729},
-DOI={10.3389/frobt.2021.665729},      	
-ISSN={2296-9144},   
+DOI={10.3389/frobt.2021.665729},
+ISSN={2296-9144},
 ABSTRACT={This paper describes IEEE P7001, a new draft standard on transparency of autonomous systems<xref ref-type="fn" rid="fn1"><sup>1</sup></xref>. In the paper, we outline the development and structure of the draft standard. We present the rationale for transparency as a measurable, testable property. We outline five stakeholder groups: users, the general public and bystanders, safety certification agencies, incident/accident investigators and lawyers/expert witnesses, and explain the thinking behind the normative definitions of “levels” of transparency for each stakeholder group in P7001. The paper illustrates the application of P7001 through worked examples of both specification and assessment of fictional autonomous systems.},
 note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="va">Verifiable Autonomy</span>]}
 }
-      
+
 @Article{Cardoso21d,
 author={Cardoso, Rafael C.
 and Kourtis, Georgios
@@ -410,27 +481,27 @@ pages={332--351},
       }
 
 
-@InProceedings{Cardoso21b, 
+@InProceedings{Cardoso21b,
 title={Agile Tasking of Robotic Systems with Explicit Autonomy},
 volume={34},
-DOI={10.32473/flairs.v34i1.128481}, 
+DOI={10.32473/flairs.v34i1.128481},
 booktitle={The International FLAIRS Conference Proceedings},
 author={Cardoso, Rafael C. and Michaloski, John L. and Schlenoff, Craig and Ferrando, Angelo and Dennis, Louise A. and Fisher, Michael},
 year={2021},
 note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
 }
 
-@article{Cardoso21a, 
-title={A Review of Agent-Based Programming for Multi-Agent Systems}, 
-volume={10}, 
-ISSN={2073-431X}, 
-DOI={10.3390/computers10020016}, 
-number={2}, 
-journal={Computers}, 
-publisher={MDPI AG}, 
-author={Cardoso, Rafael C. and Ferrando, Angelo}, 
-year={2021}, 
-month={Jan}, 
+@article{Cardoso21a,
+title={A Review of Agent-Based Programming for Multi-Agent Systems},
+volume={10},
+ISSN={2073-431X},
+DOI={10.3390/computers10020016},
+number={2},
+journal={Computers},
+publisher={MDPI AG},
+author={Cardoso, Rafael C. and Ferrando, Angelo},
+year={2021},
+month={Jan},
 pages={16},
 note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
 }
@@ -455,7 +526,7 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
 	keywords = {autonomous systems, model checking, trace expressions, Runtime verification, MCAPL},
       	note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span class="orca">ORCA</span>]}
      }
-      
+
 @inproceedings{DennisAAMAS21,
       author={Louise A. Dennis and Nir Oren},
       title={Explaining BDI agent behaviour through dialogue},
@@ -469,12 +540,12 @@ note={[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, <span
 @article{DennisAAAI21,
 author = {Louise A. Dennis and Martin Mose Bentzen and Felix Lindner and Michael Fisher},
 title={Verifiable Machine Ethics in Changing Contexts},
-volume={35}, 
-url={https://ojs.aaai.org/index.php/AAAI/article/view/17366},   
-number={13}, 
-journal={Proceedings of the AAAI Conference on Artificial Intelligence}, 
-year={2021}, 
-month={May}, 
+volume={35},
+url={https://ojs.aaai.org/index.php/AAAI/article/view/17366},
+number={13},
+journal={Proceedings of the AAAI Conference on Artificial Intelligence},
+year={2021},
+month={May},
 pages={11470-11478} ,
       note={[<span class="va">Verifiable Autonomy</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
       }
@@ -493,7 +564,7 @@ pages={11470-11478} ,
   pages     = {8},
   year      = {2021},
   doi       = {10.1007/s10458-020-09487-2},
-  note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>, 
+  note={[<span class="s4">S4</span>, <span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,
         <span class="orca">ORCA</span>, <span class="tas_vn">TAS Verifiability Node</span>]}
 }
 
@@ -678,7 +749,7 @@ note = {[<span class="va">Verifiable Autonomy</span>]}
 	Url = {https://doi.org/10.1007/s11948-020-00244-y},
 	Year = {2020},
 	Bdsk-Url-1 = {https://doi.org/10.1007/s11948-020-00244-y}}
-  
+
 @inproceedings{cardosoime,
   author = {Rafael C. Cardoso and Daniel Ene and Tom Evans and Louise A. Dennis},
   title = {Ethical Governor Systems viewed as a Multi-Agent Problem},
