--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,15 @@
+
+@ARTICLE{Verifiability:IEEE:23,
+  author={Mousavi, Mohammad Reza and Cavalcanti, Ana and Fisher, Michael and Dennis, Louise and Hierons, Rob and Kaddouh, Bilal and Law, Effie Lai-Chong and Richardson, Rob and Ringer, Jan Oliver and Tyukin, Ivan and Woodcock, Jim},
+  journal={IEEE Computer}, 
+  title="{Trustworthy Autonomous Systems Through Verifiability}", 
+  year={2023},
+  volume={56},
+  number={2},
+  pages={40-47},
+doi={10.1109/MC.2022.3192206},
+note = {[span class="tas_vn">TAS Verifiability Node</span>]}}
+
 @article{Ferrando2022,
   doi = {10.1007/s10703-022-00395-7},
   url = {https://doi.org/10.1007/s10703-022-00395-7},
