--- a/pubs.bib
+++ b/pubs.bib
@@ -8,7 +8,7 @@
   number={2},
   pages={40-47},
 doi={10.1109/MC.2022.3192206},
-note = {[span class="tas_vn">TAS Verifiability Node</span>]}}
+note = {[<span class="tas_vn">TAS Verifiability Node</span>]}}
 
 @article{Ferrando2022,
   doi = {10.1007/s10703-022-00395-7},
