--- a/pubs.bib
+++ b/pubs.bib
@@ -1,5 +1,16 @@
 
-@ARTICLE{Verifiability:IEEE:23,
+@article{nallur23,
+      author={Vivek Nallur and Louise Dennis and Selmer Bringsjord and Naveen Govindarajulu},
+      title={A Partially Synthesized Position on the Automation of Machine Ethics.},
+      journal={DISO},
+      volume=2,
+      number=14,
+      year=2023,
+      doi={10.1007/s44206-023-00040-8}.
+      note = {[<span class="tas_vn">TAS Verifiability Node</span>]}
+      }
+      
+  @ARTICLE{Verifiability:IEEE:23,
   author={Mousavi, Mohammad Reza and Cavalcanti, Ana and Fisher, Michael and Dennis, Louise and Hierons, Rob and Kaddouh, Bilal and Law, Effie Lai-Chong and Richardson, Rob and Ringer, Jan Oliver and Tyukin, Ivan and Woodcock, Jim},
   journal={IEEE Computer}, 
   title="{Trustworthy Autonomous Systems Through Verifiability}", 
