--- a/pubs.bib
+++ b/pubs.bib
@@ -1,12 +1,12 @@
 
 @article{nallur23,
-      author={Vivek Nallur and Louise Dennis and Selmer Bringsjord and Naveen Govindarajulu},
       title={A Partially Synthesized Position on the Automation of Machine Ethics.},
       journal={DISO},
       volume=2,
       number=14,
       year=2023,
-      doi={10.1007/s44206-023-00040-8}.
+      doi={10.1007/s44206-023-00040-8},
+      author={Vivek Nallur and Louise Dennis and Selmer Bringsjord and Naveen Govindarajulu},
       note = {[<span class="tas_vn">TAS Verifiability Node</span>]}
       }
       
