--- a/pubs.bib
+++ b/pubs.bib
@@ -1,6 +1,5 @@
-
-@article{nallur23,
-      title={A Partially Synthesized Position on the Automation of Machine Ethics.},
+@ARTICle{nallur23,
+      title={A Partially Synthesized Position on the Automation of Machine Ethics},
       journal={DISO},
       volume=2,
       number=14,
@@ -10,7 +9,7 @@
       note = {[<span class="tas_vn">TAS Verifiability Node</span>]}
       }
       
-  @ARTICLE{Verifiability:IEEE:23,
+@ARTICLE{Verifiability:IEEE:23,
   author={Mousavi, Mohammad Reza and Cavalcanti, Ana and Fisher, Michael and Dennis, Louise and Hierons, Rob and Kaddouh, Bilal and Law, Effie Lai-Chong and Richardson, Rob and Ringer, Jan Oliver and Tyukin, Ivan and Woodcock, Jim},
   journal={IEEE Computer}, 
   title="{Trustworthy Autonomous Systems Through Verifiability}", 
