--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,15 @@
-@ARTICle{nallur23,
+@inproceedings{stringer23, 
+author = {Stringer, Peter and Cardoso, Rafael C. and Dixon, Clare and Fisher, Michael and Dennis, Louise A.}, 
+title = {Updating Action Descriptions and Plans for Cognitive Agents}, year = {2023}, isbn = {9781450394321}, 
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems}, 
+address = {Richland, SC}, 
+booktitle = {Proceedings of the 2023 International Conference on Autonomous Agents and Multiagent Systems}, 
+pages = {2370–2372}, numpages = {3}, 
+keywords = {action descriptions, ai planning, beliefs-desires-intentions}, location = {London, United Kingdom}, series = {AAMAS '23} ,
+note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+}
+
+@ARTICLE{nallur23,
       title={A Partially Synthesized Position on the Automation of Machine Ethics},
       journal={DISO},
       volume=2,
