--- a/pubs.bib
+++ b/pubs.bib
@@ -6,7 +6,7 @@ address = {Richland, SC},
 booktitle = {Proceedings of the 2023 International Conference on Autonomous Agents and Multiagent Systems}, 
 pages = {2370–2372}, numpages = {3}, 
 keywords = {action descriptions, ai planning, beliefs-desires-intentions}, location = {London, United Kingdom}, series = {AAMAS '23} ,
-note = {<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
+note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>]}
 }
 
 @ARTICLE{nallur23,
