--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,11 @@
+@book{dennisfisher23,
+author={Louise A. Dennis and Michael Fisher},
+title={Verifiable Autonomous Systems: Using Rational Agents to Provide Assurance about Decisions Made by Machines},
+publisher={Cambridge University Press},
+year={2023},
+note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,<span class="tas_vn">TAS Verifiability Node</span>,<span class="va">Verifiable Autonomy</span>]}
+}
+
 @inproceedings{stringer23, 
 author = {Stringer, Peter and Cardoso, Rafael C. and Dixon, Clare and Fisher, Michael and Dennis, Louise A.}, 
 title = {Updating Action Descriptions and Plans for Cognitive Agents}, year = {2023}, isbn = {9781450394321}, 
