--- a/pubs.bib
+++ b/pubs.bib
@@ -1,9 +1,16 @@
+ @inproceedings{DennisNesymas23,
+      author={Louise Dennis and Marie Farrell and Michael Fisher},
+      title={Developing Multi-Agent Systems with Degrees of Neuro-Symbolic Integration [A Position Paper]},
+      booktitle={Neuro-symbolic AI for Agent and Multi-Agent systems (NeSyMAS)},
+	note={[<span class="raeng">RAEng</span>]}
+      year=2023}
+
 @book{dennisfisher23,
 author={Louise A. Dennis and Michael Fisher},
 title={Verifiable Autonomous Systems: Using Rational Agents to Provide Assurance about Decisions Made by Machines},
 publisher={Cambridge University Press},
 year={2023},
-note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,<span class="tas_vn">TAS Verifiability Node</span>,<span class="va">Verifiable Autonomy</span>]}
+note = {[<span class="rain">RAIN</span>, <span class="fs">FAIR-Space</span>,<span class="tas_vn">TAS Verifiability Node</span>,<span class="va">Verifiable Autonomy</span>,<span class="raeng">RAEng</span>]}
 }
 
 @inproceedings{stringer23, 
