--- a/pubs.bib
+++ b/pubs.bib
@@ -2,7 +2,7 @@
       author={Louise Dennis and Marie Farrell and Michael Fisher},
       title={Developing Multi-Agent Systems with Degrees of Neuro-Symbolic Integration [A Position Paper]},
       booktitle={Neuro-symbolic AI for Agent and Multi-Agent systems (NeSyMAS)},
-	note={[<span class="raeng">RAEng</span>]}
+	note={[<span class="raeng">RAEng</span>]},
       year=2023}
 
 @book{dennisfisher23,
