--- a/pubs.bib
+++ b/pubs.bib
@@ -2373,3 +2373,65 @@ note = {[<span class="fs">FAIR-SPACE</span>, <span class="rain">RAIN</span>, <sp
   bibsource = {dblp computer science bibliography, https://dblp.org},
   note = {[<span class="s4">S4</span>]}
 }
+
+@article{DBLP:journals/robotics/MacConvilleFLM23,
+  author       = {Dara MacConville and
+                  Marie Farrell and
+                  Matt Luckcuck and
+                  Rosemary Monahan},
+  title        = {CSP2Turtle: Verified Turtle Robot Plans},
+  journal      = {Robotics},
+  volume       = {12},
+  number       = {2},
+  pages        = {62},
+  year         = {2023},
+  url          = {https://doi.org/10.3390/robotics12020062},
+  doi          = {10.3390/robotics12020062},
+  timestamp    = {Fri, 02 Jun 2023 21:23:04 +0200},
+  biburl       = {https://dblp.org/rec/journals/robotics/MacConvilleFLM23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/ifm/SheridanML22,
+  author       = {Ois{\'{\i}}n Sheridan and
+                  Rosemary Monahan and
+                  Matt Luckcuck},
+  editor       = {Maurice H. ter Beek and
+                  Rosemary Monahan},
+  title        = {A Requirements-Driven Methodology: Formal Modelling and Verification
+                  of an Aircraft Engine Controller},
+  booktitle    = {Integrated Formal Methods - 17th International Conference, {IFM} 2022,
+                  Lugano, Switzerland, June 7-10, 2022, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13274},
+  pages        = {352--356},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-07727-2\_21},
+  doi          = {10.1007/978-3-031-07727-2\_21},
+  timestamp    = {Fri, 03 Jun 2022 16:42:30 +0200},
+  biburl       = {https://dblp.org/rec/conf/ifm/SheridanML22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  note = {[VALU3S]}
+}
+
+
+
+@inproceedings{DBLP:conf/re/LuckcuckTF22,
+  author       = {Matt Luckcuck and
+                  Hazel M. Taylor and
+                  Marie Farrell},
+  title        = {An Abstract Architecture for Explainable Autonomy in Hazardous Environments},
+  booktitle    = {30th {IEEE} International Requirements Engineering Conference Workshops,
+                  {RE} 2022 - Workshops, Melbourne, Australia, August 15-19, 2022},
+  pages        = {108--113},
+  publisher    = {{IEEE}},
+  year         = {2022},
+  url          = {https://doi.org/10.1109/REW56159.2022.00027},
+  doi          = {10.1109/REW56159.2022.00027},
+  timestamp    = {Wed, 07 Dec 2022 23:06:36 +0100},
+  biburl       = {https://dblp.org/rec/conf/re/LuckcuckTF22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
