--- a/pubs.bib
+++ b/pubs.bib
@@ -1,4 +1,109 @@
- @inproceedings{DennisNesymas23,
+@article{DBLP:journals/ai/BelardinelliFM23,
+  author       = {Francesco Belardinelli and
+                  Angelo Ferrando and
+                  Vadim Malvone},
+  title        = {An abstraction-refinement framework for verifying strategic properties
+                  in multi-agent systems with imperfect information},
+  journal      = {Artif. Intell.},
+  volume       = {316},
+  pages        = {103847},
+  year         = {2023},
+  url          = {https://doi.org/10.1016/j.artint.2022.103847},
+  doi          = {10.1016/j.artint.2022.103847},
+  timestamp    = {Wed, 08 Mar 2023 08:47:35 +0100},
+  biburl       = {https://dblp.org/rec/journals/ai/BelardinelliFM23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/sefm/FerrandoM22,
+  author       = {Angelo Ferrando and
+                  Vadim Malvone},
+  editor       = {Bernd{-}Holger Schlingloff and
+                  Ming Chai},
+  title        = {Runtime Verification with Imperfect Information Through Indistinguishability
+                  Relations},
+  booktitle    = {Software Engineering and Formal Methods - 20th International Conference,
+                  {SEFM} 2022, Berlin, Germany, September 26-30, 2022, Proceedings},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {13550},
+  pages        = {335--351},
+  publisher    = {Springer},
+  year         = {2022},
+  url          = {https://doi.org/10.1007/978-3-031-17108-6\_21},
+  doi          = {10.1007/978-3-031-17108-6\_21},
+  timestamp    = {Tue, 18 Oct 2022 22:16:55 +0200},
+  biburl       = {https://dblp.org/rec/conf/sefm/FerrandoM22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/atal/0001C22,
+  author       = {Angelo Ferrando and
+                  Rafael C. Cardoso},
+  editor       = {Piotr Faliszewski and
+                  Viviana Mascardi and
+                  Catherine Pelachaud and
+                  Matthew E. Taylor},
+  title        = {Safety Shields, an Automated Failure Handling Mechanism for {BDI}
+                  Agents},
+  booktitle    = {21st International Conference on Autonomous Agents and Multiagent
+                  Systems, {AAMAS} 2022, Auckland, New Zealand, May 9-13, 2022},
+  pages        = {1589--1591},
+  publisher    = {International Foundation for Autonomous Agents and Multiagent Systems
+                  {(IFAAMAS)}},
+  year         = {2022},
+  url          = {https://www.ifaamas.org/Proceedings/aamas2022/pdfs/p1589.pdf},
+  doi          = {10.5555/3535850.3536044},
+  timestamp    = {Wed, 28 Sep 2022 08:59:53 +0200},
+  biburl       = {https://dblp.org/rec/conf/atal/0001C22.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{DBLP:journals/robotics/EngelmannFPABM23,
+  author       = {D{\'{e}}bora C. Engelmann and
+                  Angelo Ferrando and
+                  Alison R. Panisson and
+                  Davide Ancona and
+                  Rafael H. Bordini and
+                  Viviana Mascardi},
+  title        = {RV4JaCa - Towards Runtime Verification of Multi-Agent Systems and
+                  Robotic Applications},
+  journal      = {Robotics},
+  volume       = {12},
+  number       = {2},
+  pages        = {49},
+  year         = {2023},
+  url          = {https://doi.org/10.3390/robotics12020049},
+  doi          = {10.3390/robotics12020049},
+  timestamp    = {Fri, 02 Jun 2023 21:23:04 +0200},
+  biburl       = {https://dblp.org/rec/journals/robotics/EngelmannFPABM23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{DBLP:conf/atal/0001M23,
+  author       = {Angelo Ferrando and
+                  Vadim Malvone},
+  editor       = {Noa Agmon and
+                  Bo An and
+                  Alessandro Ricci and
+                  William Yeoh},
+  title        = {Towards the Verification of Strategic Properties in Multi-Agent Systems
+                  with Imperfect Information},
+  booktitle    = {Proceedings of the 2023 International Conference on Autonomous Agents
+                  and Multiagent Systems, {AAMAS} 2023, London, United Kingdom, 29 May
+                  2023 - 2 June 2023},
+  pages        = {793--801},
+  publisher    = {{ACM}},
+  year         = {2023},
+  url          = {https://dl.acm.org/doi/10.5555/3545946.3598713},
+  doi          = {10.5555/3545946.3598713},
+  timestamp    = {Tue, 23 May 2023 16:02:48 +0200},
+  biburl       = {https://dblp.org/rec/conf/atal/0001M23.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DennisNesymas23,
       author={Louise Dennis and Marie Farrell and Michael Fisher},
       title={Developing Multi-Agent Systems with Degrees of Neuro-Symbolic Integration [A Position Paper]},
       booktitle={Neuro-symbolic AI for Agent and Multi-Agent systems (NeSyMAS)},
