--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,14 @@
+@INPROCEEDINGS{BuitenDennisSchwammberger23,
+  author={Buiten, Miriam C. and Dennis, Louise A. and Schwammberger, Maike},
+  booktitle={2023 IEEE 31st International Requirements Engineering Conference Workshops (REW)}, 
+  title={A Vision on What Explanations of Autonomous Systems are of Interest to Lawyers}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={332-336},
+note={[<span class="tas_vn">TAS Verifiability Node</span>, <spam class="car">Computational Agent Responsibility</span>]},
+  doi={10.1109/REW57809.2023.00062}}
+
 @article{DBLP:journals/ai/BelardinelliFM23,
   author       = {Francesco Belardinelli and
                   Angelo Ferrando and
