--- a/pubs.bib
+++ b/pubs.bib
@@ -6,7 +6,7 @@
   volume={},
   number={},
   pages={332-336},
-note={[<span class="tas_vn">TAS Verifiability Node</span>, <spam class="car">Computational Agent Responsibility</span>]},
+note={[<span class="tas_vn">TAS Verifiability Node</span>, <span class="car">Computational Agent Responsibility</span>]},
   doi={10.1109/REW57809.2023.00062}}
 
 @article{DBLP:journals/ai/BelardinelliFM23,
