--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,17 @@
+@article{Anderson_2023,
+	doi = {10.4204/eptcs.391.10},  
+	url = {https://doi.org/10.4204%2Feptcs.391.10},
+	year = 2023,
+	month = {sep},
+	publisher = {Open Publishing Association},
+	volume = {391},
+	pages = {83--88},
+	author = {Christopher R. Anderson and Louise A. Dennis},
+	title = {Autonomous Systems{\textquotesingle} Safety Cases for use in {UK} Nuclear Environments},
+	journal = {Electronic Proceedings in Theoretical Computer Science},
+	note={[<span class="rain">RAIN</span>]}
+}
+
 @INPROCEEDINGS{BuitenDennisSchwammberger23,
   author={Buiten, Miriam C. and Dennis, Louise A. and Schwammberger, Maike},
   booktitle={2023 IEEE 31st International Requirements Engineering Conference Workshops (REW)}, 
