--- a/pubs.bib
+++ b/pubs.bib
@@ -1,3 +1,15 @@
+@InProceedings{SGAI23,
+author="Collenette, Joe and Dennis, Louise and Fisher, Michael",
+editor="Bramer, Max and Stahl, Frederic",
+title="{Prospective Responsibility for Multi-agent Systems}",
+booktitle="Artificial Intelligence XL",
+year="2023",
+publisher="Springer",
+pages="247--252",
+note={[<span class="car">Computational Agent Responsibility</span>]},
+isbn="978-3-031-47994-6"
+}
+
 @article{Anderson_2023,
 	doi = {10.4204/eptcs.391.10},  
 	url = {https://doi.org/10.4204%2Feptcs.391.10},
