Updating fmas, adding 2023

--- a/_events/fmas2019.md
+++ b/_events/fmas2019.md
@@ -1,6 +1,6 @@
 ---
 layout: redirect
-title: "First Workshop on Formal Methods for Autonomous Systems"
+title: "First International Workshop on Formal Methods for Autonomous Systems"
 date : 2019-10-11
 permalink: /events/fmas2019/
 belogsToSeries: fmas
