--- a/_events/fmas2021.md
+++ b/_events/fmas2021.md
@@ -1,6 +1,6 @@
 ---
 layout: redirect
-title: "Third Workshop on Formal Methods for Autonomous Systems"
+title: "Third International Workshop on Formal Methods for Autonomous Systems"
 belogsToSeries: fmas
 image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
 date : 2021-10-21
