--- a/_events/fmas2020.md
+++ b/_events/fmas2020.md
@@ -1,6 +1,6 @@
 ---
 layout: redirect
-title: "Second Workshop on Formal Methods for Autonomous Systems"
+title: "Second International Workshop on Formal Methods for Autonomous Systems"
 date : 2020-12-07
 permalink: /events/fmas2020/
 belogsToSeries: fmas
