--- a/_events/fmas2022.md
+++ b/_events/fmas2022.md
@@ -1,6 +1,6 @@
 ---
 layout: redirect
-title: "Fourth Workshop on Formal Methods for Autonomous Systems"
+title: "Fourth International Workshop on Formal Methods for Autonomous Systems"
 belogsToSeries: fmas
 image: https://autonomy-and-verification.github.io/images/logos/FMAS-Logo.png
 date : 2022-09-26
